Partially implement parser and tree

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <script src="tree.js"></script>
         <script src="fmc-engine.js"></script>
     </body>
 </html>
