Add jQuery and rewrite DOM code in jQuery

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <input type="text" id="term" size="60" placeholder="FMC term">
         <input type="button" id="parse" value="Parse">
         <input type="button" id="run" value="Run">
-        <input type="button" id="reset" value="Reset"><br>
+        <input type="button" id="reset" value="Clear all"><br>
         <textarea id="parsed" rows="4" cols="66" placeholder="Parsed FMC term"></textarea><br>
         <textarea id="console" rows="10" cols="66" placeholder="Program steps"></textarea><br>
         <textarea id="output" rows="10" cols="66" placeholder="I/O"></textarea>
 
+        <script src="jquery-3.7.1.js"></script>
         <script src="tree.js"></script>
         <script src="fmc-engine.js"></script>
     </body>
