--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         <script src="jquery-3.7.1.js"></script>
         <script src="tree.js"></script>
         <script src="fmc-engine.js"></script>
+        <script src="interface.js"></script>
     </body>
 </html>
