Move styling info to style.css

--- a/index.html
+++ b/index.html
@@ -3,19 +3,7 @@
 <html>
     <head>
         <title>The Functional Machine Simulator</title>
-        <style>
-            body {
-                background-color: #fff7e4;
-                color: black;
-                font-family: sans-serif;
-                margin: auto;
-                width: 1200px;
-                max-width: 95%;
-                border: 2px groove;
-                padding: 10px;
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
