Implement custom alert boxes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+    <div id="haze"></div>
+    <div id="alert">
+        <span id="alert-text">Secret test alert text</span>
+        <span id="closealert">&times;</span>
+    </div>
     <div class="app-container">
         <header class="header">FM<sup>2</sup>: The Functional Machine Machine</header>
 
@@ -41,14 +46,14 @@
 
             <input type="button" id="step" value="Step">
 
-            <input type="button" id="resetall" value="Clear all">
+            <input type="button" id="reset" value="Clear output">
 
-            <input type="button" id="reset" value="Clear panes">
+            <input type="button" id="resetall" value="Clear all">
 
         </div>
     </div>
     <hr>
-    <footer>The Functional Machine Machine is a Frog Language project | &#128056</footer>
+    <footer>The Functional Machine Machine is a Frog-FMC project | &#128056</footer>
 
 
     <script src="jquery-3.7.1.js"></script>
