--- a/index.html
+++ b/index.html
@@ -38,17 +38,23 @@
 
         <div class="controls-container">
 
-            <textarea id="term" placeholder="FMC term"></textarea>
+            <div class="control">
+                <textarea id="term" placeholder="FMC term"></textarea>
+            </div>
 
-            <input type="button" id="parse" value="Parse">
+            <div class="control">
+                <input type="button" id="parse" value="Parse">
 
-            <input type="button" id="run" value="Run">
+                <input type="button" id="run" value="Run">
 
-            <input type="button" id="step" value="Step">
+                <input type="button" id="step" value="Step">
 
-            <input type="button" id="reset" value="Clear output">
+                <input type="button" id="reset" value="Reset output">
 
-            <input type="button" id="resetall" value="Clear all">
+                <input type="button" id="resetall" value="Reset all">
+            </div>
+
+            
 
         </div>
     </div>
