Implement FMC term upload from file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
             </div>
 
             <div class="control">
-                <input type="button" id="load" value="Load">
+                <input id="upload" type="file" accept=".fmc,.txt">
+                
+            </div>
+
+            <div class="control">
 
                 <input type="button" id="parse" value="Parse">
 
