--- a/index.html
+++ b/index.html
@@ -9,13 +9,32 @@
 
 <body>
     <div id="haze"></div>
+
     <div id="alert">
         <span id="alert-text">Secret test alert text</span>
-        <span id="closealert">&times;</span>
+        <span id="closealert" class="closebutton">&times;</span>
     </div>
-    <div class="app-container">
-        <header class="header">FM<sup>2</sup>: The Functional Machine Machine</header>
 
+    <div class="options">
+        <span id="closeoptions" class="closebutton">&times;</span>
+        <b>Settings</b>
+        <hr>
+        Use tree-style syntax for all windows <input type="checkbox"><br>
+        RNG maximum range <input type="number"><br>
+        Theme <select id="themeselect">
+            <option selected value="classic">Classic</option>
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+            <option value="hotdog">Hotdog Stand</option>
+            <option value="testing">Testing</option>
+        </select>
+    </div>
+
+    <div class="app-container">
+        <header class="header">
+            FM<sup>2</sup>: The Functional Machine Machine
+        </header>
+        
         <div class="pane-container">
 
             <div class="pane" id="parse-pane">
@@ -39,7 +58,7 @@
 
         <div class="controls-container">
 
-            <div class="control">
+            <div class="control" style="min-width:20%">
                 <textarea id="term" placeholder="FMC term"></textarea>
             </div>
 
@@ -61,7 +80,9 @@
                 <input type="button" id="resetall" value="Reset all">
             </div>
 
-            
+            <div class="control" style="margin:0px;height:100%;justify-content:right">
+                <input type="button" id="settings" value="&#9881">
+            </div>
 
         </div>
     </div>
