--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             </div>
             <div class="pane" id="io-pane">
                 <div class="io-cont-container">
-                    <textarea readonly id="output" placeholder="I/O"></textarea>
-                    <textarea readonly id="cont" placeholder="Continuation"></textarea>
+                    <textarea readonly id="output" placeholder="I/O" style="margin-bottom:5px"></textarea>
+                    <textarea readonly id="cont" placeholder="Continuation" style="margin-top:5px"></textarea>
                 </div>
             </div>
             <div class="pane" id="stack-pane">
