--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <option selected value="classic">Classic</option>
             <option value="light">Light</option>
             <option value="dark">Dark</option>
-            <option value="hotdog">Hotdog Stand</option>
+            <option value="hicontrast">High Contrast</option>
             <option value="testing">Testing</option>
         </select>
     </div>
