Correct previous commit: "Remove syntax setting dummy"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>The Functional Machine Simulator</title>
+    <title>The Functional Machine Machine</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -19,7 +19,7 @@
         <span id="closeoptions" class="closebutton">&times;</span>
         <b>Settings</b>
         <hr>
-        Use tree-style syntax for all windows <input type="checkbox"><br>
+        RNG maximum range <input type="number"><br>
         Theme <select id="themeselect">
             <option selected value="classic">Classic</option>
             <option value="light">Light</option>
@@ -85,6 +85,7 @@
 
         </div>
     </div>
+
     <div class="footer">
         <footer>
             <span style="text-align:left;width:50%;display:inline-block;">
@@ -95,8 +96,6 @@
             </span>
         </footer>
     </div>
-    
-
 
     <script src="jquery-3.7.1.js"></script>
     <script src="tree.js"></script>
