Implement RNG range setting

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span id="closeoptions" class="closebutton">&times;</span>
         <b>Settings</b>
         <hr>
-        RNG maximum range <input type="number"><br>
+        RNG maximum range <input type="number" id="rngval"><br>
         Theme <select id="themeselect">
             <option selected value="classic">Classic</option>
             <option value="light">Light</option>
