Add input box elements

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         </select>
     </div>
 
+    <div class="input-box">
+        <b>Input</b>
+        <hr>
+        <input type="text" id="input-text" placeholder=">>"><br>
+        <input type="button" id="submit-input" value="Submit">
+    </div>
+
     <div class="app-container">
         <header class="header">
             FM<sup>2</sup>: The Functional Machine Machine
