--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@
                 <input type="button" id="resetall" value="Reset all">
             </div>
 
-            <div class="control" style="margin:0px;height:100%;justify-content:right">
+            <div class="control" style="margin:0px;height:100%;justify-content:left">
                 <input type="button" id="settings" value="&#9881">
+            </div>
+
+            <div id="running" style="float:right;justify-content:right">
+                Idle
             </div>
 
         </div>
