Implement custom input prompts into application

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="input-box">
         <b>Input</b>
         <hr>
-        <input type="text" id="input-text" placeholder=">>"><br>
+        <input type="text" id="input-text" placeholder=">>" autofocus><br>
         <input type="button" id="submit-input" value="Submit">
     </div>
 
