--- a/index.html
+++ b/index.html
@@ -29,6 +29,37 @@
         </select>
     </div>
 
+    <div class="help">
+        <span id="closehelp" class="closebutton">&times;</span>
+        <b>Help</b>
+        <hr>
+        The Functional Machine Machine is composed of two parts:
+        <ul>
+            <li><b>Output</b> (top section)</li>
+            <li><b>Controls</b> (bottom section)</li>
+        </ul>
+        FMC terms can be typed directly into the 'FMC term' box
+        in Controls, or uploaded from a .fmc or .txt file using the
+        'Browse' button. The remaining buttons can be used to control
+        the machine:
+        <ul>
+            <li><b>Parse</b> - Display the parsed AST form of the FMC term.</li>
+            <li><b>Run</b> - Evaluate the entire FMC term at once, displaying the program trace and final state.</li>
+            <li><b>Step</b> - Perform a single machine step on the FMC term, displaying trace and state in turn.</li>
+            <li><b>Reset output</b> - Reset outputs and erase the current state of the machine.</li>
+            <li><b>Reset all</b> - Reset the entire machine, erasing the FMC term additionally.</li>
+        </ul>
+        The Gear &#9881 button opens the machine settings, where the page theme and RNG range can be changed.<br><br>
+        The Output boxes display the following:
+        <ul>
+            <li><b>Parsed FMC term</b> - The parsed tree form of the current FMC term.</li>
+            <li><b>Machine steps</b> - The sequence of FMC terms processed by the machine, and exit status if completed.</li>
+            <li><b>I/O</b> - Outputs from the machine in sequence.</li>
+            <li><b>Continuation</b> - The current state of the continuation stack, with the lowest term being the top of the stack.</li>
+            <li><b>Stacks</b> - The current state of the location stacks, with the end being the top of each stack.</li>
+        </ul>
+    </div>
+
     <div class="input-box">
         <b>Input</b>
         <hr>
@@ -86,6 +117,7 @@
 
             <div class="control" style="margin:0px;height:100%;justify-content:left">
                 <input type="button" id="settings" value="&#9881">
+                <input type="button" id="help" value="?">
             </div>
 
             <div id="running" style="float:right;justify-content:right">
