--- a/index.html
+++ b/index.html
@@ -95,29 +95,29 @@
         <div class="controls-container">
 
             <div class="control" style="min-width:20%">
-                <textarea id="term" placeholder="FMC term"></textarea>
+                <textarea id="term" placeholder="FMC term" title="FMC term input"></textarea>
             </div>
 
             <div class="control">
-                <input id="upload" type="file" accept=".fmc,.txt">
+                <input id="upload" type="file" accept=".fmc,.txt" title="Upload FMC term file">
             </div>
 
             <div class="control">
 
-                <input type="button" id="parse" value="Parse">
+                <input type="button" id="parse" value="Parse" title="Parse FMC term">
 
-                <input type="button" id="run" value="Run">
+                <input type="button" id="run" value="Run" title="Run FMC term">
 
-                <input type="button" id="step" value="Step">
+                <input type="button" id="step" value="Step" title="Step FMC term">
 
-                <input type="button" id="reset" value="Reset output">
+                <input type="button" id="reset" value="Reset output" title="Reset output">
 
-                <input type="button" id="resetall" value="Reset all">
+                <input type="button" id="resetall" value="Reset all" title="Reset all">
             </div>
 
             <div class="control" style="margin:0px;height:100%;justify-content:left">
-                <input type="button" id="settings" value="&#9881">
-                <input type="button" id="help" value="?">
+                <input type="button" id="settings" value="&#9881" title="Settings">
+                <input type="button" id="help" value="?" title="Help">
             </div>
 
             <div id="running" style="float:right;justify-content:right">
