Implement button to hide footer

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                 </span>
                 <span style="text-align:right;width:49%;display:inline-block;">
                     <i>'Pushing to a location near you.'</i>
+                    <span id="closefooter" class="closebutton">&times;</span>
                 </span>
             </footer>
         </div>
