--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <input type="button" id="resetall" value="Reset all" title="Reset all">
             </div>
 
-            <div class="control" style="margin:0px;height:100%;justify-content:left">
+            <div class="control" style="margin:0px;height:100%;justify-content:left;flex-flow: column wrap;">
                 <input type="button" id="settings" value="&#9881" title="Settings">
                 <input type="button" id="help" value="?" title="Help">
             </div>
