Rename 'Stacks' window to 'Location stacks'

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="pane" id="stack-pane">
-                <textarea readonly id="stacks" placeholder="Stacks"></textarea>
+                <textarea readonly id="stacks" placeholder="Location stacks"></textarea>
             </div>
 
         </div>
