Integrate experimental run option into UI

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         RNG maximum range <input type="number" id="rngval"><br><br>
         RNG queue amount <input type="range" id="rngqueue" min="1" max="15"
             oninput="this.nextElementSibling.value = this.value"><output>5</output><br><br>
+        Enable experimental async run <input type="checkbox" id="exprun"><br><br>
         Theme <select id="themeselect">
             <option selected value="classic">Classic</option>
             <option value="light">Light</option>
