Update help window

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li><b>Machine steps</b> - The sequence of FMC terms processed by the machine, and exit status if completed.
             </li>
             <li><b>I/O</b> - Outputs from the machine in sequence.</li>
-            <li><b>Continuation</b> - The current state of the continuation stack, with the lowest term being the top of
+            <li><b>Continuation</b> - The current state of the continuation stack, with the top term being the top of
                 the stack.</li>
             <li><b>Stacks</b> - The current state of the location stacks, with the end being the top of each stack.</li>
         </ul>
