--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="footer">
             <footer>
                 <span style="text-align:left;width:50%;display:inline-block;">
-                    The Functional Machine Machine is a Frog-FMC project | &#128056
+                    The Functional Machine Machine is an FMC project | &#128161
                 </span>
                 <span style="text-align:right;width:49%;display:inline-block;">
                     <i>'Pushing to a location near you.'</i>
