Change "I/O" to "Machine outputs"

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="pane" id="io-pane">
                 <div class="io-cont-container">
-                    <textarea readonly id="output" placeholder="I/O" style="margin-bottom:5px"></textarea>
+                    <textarea readonly id="output" placeholder="Machine outputs" style="margin-bottom:5px"></textarea>
                     <textarea readonly id="cont" placeholder="Continuation" style="margin-top:5px"></textarea>
                 </div>
             </div>
