--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="controls-container">
 
-            <div class="control" style="min-width:20%">
+            <div class="control" style="min-width:20%; max-width: 45%;">
                 <textarea id="term" placeholder="FMC term" title="FMC term input"></textarea>
             </div>
 
@@ -107,7 +107,7 @@
                 <label id="up-btn" for="upload" title="Upload FMC term file">Upload...</label>
             </div>
 
-            <div class="control">
+            <div class="control" style="max-width: 40%;">
 
                 <input type="button" id="parse" value="Parse" title="Parse FMC term">
 
@@ -125,7 +125,7 @@
                 <input type="button" id="help" value="?" title="Help">
             </div>
 
-            <div id="running" style="float:right;justify-content:right;flex: 0 1 auto;">
+            <div id="running" style="float:right;justify-content:right;flex: 0 0 auto;">
                 Idle
             </div>
 
