--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <li><b>Output</b> (top section)</li>
             <li><b>Controls</b> (bottom section)</li>
         </ul>
-        FMC terms can be typed directly into the 'FMC term' box
-        in Controls, or uploaded from a .fmc or .txt file using the
-        'Upload...' button. The remaining buttons can be used to control
+        Enter an FMC term directly into the 'FMC term' box
+        in Controls, or upload from a .fmc or .txt file using the
+        'Upload...' button. Use the remaining buttons to control
         the machine:
         <ul>
             <li><b>Parse</b> - Display the parsed AST form of the FMC term.</li>
@@ -51,7 +51,7 @@
             <li><b>Reset output</b> - Reset outputs and erase the current state of the machine.</li>
             <li><b>Reset all</b> - Reset the entire machine, erasing the FMC term additionally.</li>
         </ul>
-        The Gear &#9881 button opens the machine settings, where the page theme and RNG range can be changed.<br><br>
+        The Gear &#9881 button opens the machine settings, where the page theme and RNG parameters can be changed.<br><br>
         The Output boxes display the following:
         <ul>
             <li><b>Parsed FMC term</b> - The parsed tree form of the current FMC term.</li>
@@ -62,6 +62,7 @@
                 the stack.</li>
             <li><b>Stacks</b> - The current state of the location stacks, with the end being the top of each stack.</li>
         </ul>
+        Use Ctrl + \ to halt execution when using the experimental asynchronous running mode.
     </div>
 
     <div class="input-box">
@@ -115,9 +116,9 @@
 
                 <input type="button" class="machine-ctrl" id="step" value="Step" title="Step FMC term">
 
-                <input type="button" class="machine-ctrl" id="reset" value="Reset output" title="Reset output">
+                <input type="button" id="reset" value="Reset output" title="Reset output">
 
-                <input type="button" class="machine-ctrl" id="resetall" value="Reset all" title="Reset all">
+                <input type="button" id="resetall" value="Reset all" title="Reset all">
             </div>
 
             <div class="control" style="margin:0px;height:100%;justify-content:left;flex-flow: column wrap;">
