--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <li><b>Reset output</b> - Reset outputs and erase the current state of the machine.</li>
             <li><b>Reset all</b> - Reset the entire machine, erasing the FMC term additionally.</li>
         </ul>
-        The Gear &#9881 button opens the machine settings, where the page theme and RNG parameters can be changed.<br><br>
+        The Gear &#9881 button opens the machine settings, where the page theme and RNG parameters can be
+        changed.<br><br>
         The Output boxes display the following:
         <ul>
             <li><b>Parsed FMC term</b> - The parsed tree form of the current FMC term.</li>
