Change file upload button to file symbol

--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
 
         <div class="controls-container">
 
-            <div class="control" style="min-width:20%;">
+            <div class="control" style="min-width:20%; max-width:40%;">
                 <textarea id="term" placeholder="FMC term" title="FMC term input"></textarea>
             </div>
 
             <div class="control">
                 <input id="upload" type="file" accept=".fmc,.txt" hidden>
-                <label id="up-btn" for="upload" title="Upload FMC term file">Upload...</label>
+                <label id="up-btn" for="upload" title="Upload FMC term file">&#128193;</label>
             </div>
 
-            <div class="control" style="width: 40%; flex: 1 0 auto;">
+            <div class="control" style="flex: 1 1 auto;">
 
                 <input type="button" class="machine-ctrl" id="parse" value="Parse" title="Parse FMC term">
 
