Update help section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
         Enter an FMC term directly into the 'FMC term' box
         in Controls, or upload from a .fmc or .txt file using the
-        'Upload...' button. Use the remaining buttons to control
+        &#128193; file button. Use the remaining buttons to control
         the machine:
         <ul>
             <li><b>Parse</b> - Display the parsed AST form of the FMC term.</li>
