Update help documentation

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 the stack.</li>
             <li><b>Stacks</b> - The current state of the location stacks, with the end being the top of each stack.</li>
         </ul>
-        Use Ctrl + \ to halt execution when using the experimental asynchronous running mode.
+        Use Ctrl + \ to halt execution when using the asynchronous run mode.
     </div>
 
     <div class="input-box">
