Change FMM to fmm

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="app-container">
         <header class="header">
-            FM<sup>2</sup>: The Functional Machine Machine
+            fmm: The Functional Machine Machine
         </header>
 
         <div class="pane-container">
